--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   connectivity_plus: ^4.0.1
+  geolocator: ^12.0.0
   http: ^1.2.1
   location: ^5.0.3
   background_location: ^0.13.0
