--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  volume_controller: ^2.0.8
   geodart: ^0.3.6
-  audioplayers: ^6.0.0
+  # audioplayers: ^6.0.0
+  flutter_ringtone_player: ^4.0.0+3
   connectivity_plus: ^4.0.1
   geolocator: ^12.0.0
   http: ^1.2.1
